# state-actor

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  e2e_test.go  genesis.json  go.mod  go.sum  main.go  test.sh
bridges/: README.md
bridges/besu/: build.gradle  settings.gradle
bridges/besu/src/main/java/stateactor/: BesuBridge.java
bridges/erigon/: go.mod  go.sum  main.go
bridges/geth/: .gitignore  go.mod  main.go
bridges/nethermind/: NethermindBridge.csproj  Program.cs  global.json
bridges/protocol/: protocol.go
docs/: 300GB-BLOAT-PLAN.md  ARCHITECTURE.md  KURTOSIS.md
docs/web/: index.html
examples/: test-genesis.json
generator/: binary_stack_trie.go  bridge_test.go  config.go  deep_branch.go  deep_branch_test.go  generator.go  generator_test.go  genesis_integration_test.go  grouped_emission_test.go  regroup.go  stats_server.go  writer.go  writer_bridge.go  writer_erigon.go  writer_erigon_test.go  writer_geth.go  writer_nethermind.go  writer_reth.go  writer_reth_test.go
genesis/: genesis.go  genesis_test.go
integration/: bloated-devnet-config.yaml  geth-wrapper.sh  launch-bloated-devnet.sh  stategen_launcher.star
reth-import/: Cargo.toml
reth-import/src/: bundle.rs  main.rs
scripts/: generate-state.sh  start-all.sh  start-client.sh  test-clients.sh  test-geth.sh
